# vidarax

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  vidarax.toml
.github/workflows/: ci.yml
benchmarks/: bench.py  bench_matrix.py  bench_realtime.py  bench_stream.py  measure_novelty.py  provider_hardware_matrix.py  run_screenshare.py  wiki_ground_truth.json
crates/vidarax-api/: Cargo.toml
crates/vidarax-api/src/: auth.rs  config.rs  delivery.rs  handlers.rs  ids.rs  inference_metrics.rs  lib.rs  main.rs  models.rs  policies.rs  response.rs  router.rs  security.rs  semantic.rs  semantic_infer.rs  server.rs  spacetime_client.rs  state.rs  telemetry.rs  tenant_labels.rs  triggers.rs  validation.rs  wal_sink.rs  whip.rs
crates/vidarax-api/tests/: api_integration.rs  feature_parity_api.rs  staging_provider_live.rs
crates/vidarax-cli/: Cargo.toml
crates/vidarax-cli/src/: edge.rs  main.rs
crates/vidarax-contracts/: Cargo.toml
crates/vidarax-contracts/src/: errors.rs  lib.rs  lifecycle.rs  models.rs  processing.rs  triggers.rs
crates/vidarax-core/: Cargo.toml
crates/vidarax-core/examples/: novelty_live_calibration.rs  novelty_replay.rs  rustrtc_spike.rs  semantic_merge_bench.rs  spike_test.html  tiering_funnel.rs  tiering_profile.rs
crates/vidarax-core/src/: admission.rs  backends.rs  coordinates.rs  crop.rs  dedup.rs  embedding_sidecar.rs  gate.rs  gemini.rs  lib.rs  loop_detector.rs  metrics.rs  novelty.rs  observability.rs  pipeline.rs  provider.rs  semantic_merge.rs  tiered_vlm.rs  timeline.rs  training_data.rs  trigger.rs  zone.rs
crates/vidarax-core/src/ingest/: fetch.rs  ffmpeg.rs  mod.rs  pipeline.rs  validate.rs
crates/vidarax-core/src/lockfree/: spsc.rs
crates/vidarax-core/src/memory/: bump.rs  mod.rs  vm_region.rs
crates/vidarax-core/src/webrtc/: clip.rs  decode.rs  depacketize.rs  mod.rs  recycle.rs  resources.rs  runtime.rs  session.rs  signals.rs  workers.rs
crates/vidarax-core/tests/: decode_pipeline.rs  feature_parity.rs  h264_decode.rs  loop_detector.rs  replay_schema.rs  rtsp_source.rs  selective_decode.rs  semantic_merge_replay.rs  tiered_vlm.rs  vp8_decode.rs  yuv_signals.rs
crates/vidarax-core/tests/fixtures/: minilm_screenshare_150.f32  vp8_sample.ivf
crates/zvec-sys-patched/: .cargo_vcs_info.json  Cargo.toml  build.rs
crates/zvec-sys-patched/zvec-c-wrapper/include/: zvec_c_internal.h
crates/zvec-sys-patched/zvec-c-wrapper/src/: doc.cpp
deploy/: Dockerfile.api  docker-compose.local.yml  vm-scrape.yml
deploy/certs/: README.md
deploy/edge/: edge.env.example  vidarax-api.service  vidarax-update.service
docs/: DEMO-SCRIPT.md  PITCH-DECK.md  api-surface.md  deployment.md  edge-deployment.md  frame-exact-pts-design.md  security.md  webrtc-decode-limitations.md
docs-site/: astro.config.mjs  package-lock.json  package.json  wrangler.jsonc
docs-site/src/content/docs/: api.md  architecture.md  development.md  edge.md  events.md  gate.md  index.md  ingest.md  operations.mdoc  policy-rollouts.md  quickstart.mdoc  triggers.md
docs-site/src/content/docs/internals/: allocation-discipline.md  decode-sidecar.md  gate-internals.md  media-plane.md  state-and-cancellation.md  wal-and-events.md  webrtc-ingest.md
docs-site/src/styles/: theme.css
examples/: README.md  error-handling-demo.ts  sdk-demo.ts  whip-live-demo.ts
fixtures/replay/: frame-metadata.valid.json  frame-signals.json  processing-config.valid.json
schemas/: frame-metadata.schema.json  processing-config.schema.json
scripts/: axolotl_config.yaml  bench_api_path.sh  bench_provider_transport.sh  bench_regression.sh  bench_remote_http.sh  bench_wiki.sh  e2e_integration_test.sh  e2e_test_video.py  embedding_server.py  export_specialist.py  generate_test_video.sh  integration_test_full.py  local_vlm_server.py  provision_models.sh  release_gates.sh  requirements-training.txt  smoke_mp4_pipeline.sh  smoke_v1.sh  staging_provider_e2e.sh  train_specialist.py  train_specialist_mlx.py  validate_replay_and_schema.sh
spacetime-module/: Cargo.toml  rust-toolchain.toml
spacetime-module/src/: lib.rs
supabase/: config.toml
supabase/migrations/: 20260301000000_create_vidarax_tables.sql
tasks/: lessons.md
ui/: index.html  package-lock.json  package.json  playwright.config.ts
ui/src/: App.vue  main.ts  style.css
ui/src/assets/: icon-animations.css
ui/src/components/icons/: AnimatedIcon.vue
ui/src/components/layout/: AppHeader.vue  AppSidebar.vue
ui/src/components/stream/: ProcessingVisualization.vue
ui/src/components/tracing/: GenerationHealth.vue  MetricsGrid.vue  PipelineOverview.vue  TraceTimeline.vue
ui/src/composables/: useEventStream.ts  useMetrics.ts  useWhip.ts
ui/src/lib/: api.ts  config.ts  logger.ts  spacetime.ts  whipLifecycle.ts
ui/src/pages/: DashboardPage.vue  RunDetailPage.vue  SettingsPage.vue  StreamPage.vue  TracingPage.vue  UploadPage.vue
ui/src/router/: index.ts
ui/src/stores/: auth.ts  events.ts  runs.ts  stream.ts
ui/src/style/: icon-animations.css
ui/tests/: auth-storage.spec.ts  events-store.spec.ts  feedback.spec.ts  navigation.spec.ts  screenshots.spec.ts  settings.spec.ts  stream-features.spec.ts  tracing.spec.ts  upload-reason-settings.spec.ts
