[workspace]
members = [
  "crates/vidarax-core",
  "crates/vidarax-contracts",
  "crates/vidarax-cli",
  "crates/vidarax-api",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
rust-version = "1.89"
license = "MIT"
authors = ["vidarax contributors"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = 3

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "trace"] }

[profile.dev]
debug = 1
