[package]
name = "vidarax-spacetime-module"
version = "0.1.0"
edition = "2021"
license = "MIT"

# SpacetimeDB modules must be compiled as cdylib for WASM.
[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = "2"

[profile.release]
lto = true
opt-level = "z"
strip = "symbols"

# Prevent Cargo from rolling this crate into the parent workspace.
# SpacetimeDB modules target wasm32-unknown-unknown and must remain
# independent of the host workspace to avoid toolchain mismatches.
[workspace]
