[package]
name = "vidarax-api"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
h3-experimental = ["dep:futures-util", "dep:tokio-quiche"]

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = { version = "0.3", optional = true }
tokio-quiche = { version = "=0.15.0", optional = true }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
getrandom = "0.2"
arc-swap = "1"
base64 = "0.22"
vidarax-contracts = { path = "../vidarax-contracts" }
vidarax-core = { path = "../vidarax-core" }
kanal = "0.1"

[dev-dependencies]
