[package]
name = "vidarax-api"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
h3-experimental = ["dep:futures-util", "dep:tokio-quiche"]

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "sync", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = { version = "0.3.32", optional = true }
tokio-quiche = { version = "=0.16.0", optional = true }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6", features = ["compression-gzip", "compression-zstd"] }
http-body-util = "0.1.3"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "blocking"] }
getrandom = "0.4"
arc-swap = "1.8"
base64 = "0.22.1"
vidarax-contracts = { path = "../vidarax-contracts" }
vidarax-core = { path = "../vidarax-core" }
kanal = "0.1.1"
rustls = { version = "0.23", features = ["ring"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "trace"] }

[dev-dependencies]
