[package]
name = "vidarax-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
vidarax-contracts = { path = "../vidarax-contracts" }
vidarax-core = { path = "../vidarax-core" }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
indicatif = "0.17"
owo-colors = "4"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "multipart", "query"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "vidarax"
path = "src/main.rs"
