[package]
name = "vidarax-cli"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
vidarax-contracts = { path = "../vidarax-contracts" }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
ed25519-dalek = { version = "2", features = ["rand_core"] }
fs2 = "0.4"
hex = "0.4"
indicatif = "0.17"
owo-colors = "4"
rand = "0.8"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "multipart", "query"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "vidarax"
path = "src/main.rs"
