[package]
name = "vidarax-core"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1"
vidarax-contracts = { path = "../vidarax-contracts" }
openh264 = "0.6"
jpeg-encoder = "0.6"
kanal = "0.1"
core_affinity = "0.8"
crossbeam = "0.8"

[features]
# Gate the rustrtc spike example behind a feature so it is not compiled on
# stable Rust toolchains. rustrtc uses let-chain syntax that requires nightly.
# Enable with: cargo run --example rustrtc_spike --features rustrtc-spike
rustrtc-spike = ["dep:rustrtc", "dep:rustls", "dep:tracing", "dep:tracing-subscriber"]

# spike: prove rustrtc WebRTC frame delivery (Task 0) — optional to avoid
# nightly-only let-chain compilation failures on stable toolchains.
[dependencies.rustrtc]
git = "https://github.com/restsend/rustrtc"
optional = true

[dependencies.rustls]
version = "0.23"
optional = true

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]
optional = true

[dev-dependencies]
jsonschema = "0.42"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json"] }

[[example]]
name = "rustrtc_spike"
required-features = ["rustrtc-spike"]
