[package]
name = "vidarax-core"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
serde = { version = "1", features = ["derive"] }
zvec-bindings = { version = "0.2", features = ["sync"], optional = true }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
serde_json = "1"
vidarax-contracts = { path = "../vidarax-contracts" }
openh264 = "0.9"
jpeg-encoder = "0.7"
memchr = "2"
kanal = "0.1.1"
base64 = "0.22"
tokio = { version = "1", features = ["rt", "time"] }

[features]
# Extra deps needed only by the rustrtc spike example (TLS crypto provider
# initialisation). rustrtc itself is now a required dep.
# Enable with: cargo run --example rustrtc_spike --features rustrtc-spike
rustrtc-spike = ["dep:tracing-subscriber"]
training = ["dep:zvec-bindings", "dep:rusqlite"]

# rustrtc: pure-Rust WebRTC transport (session.rs).
# rustls: TLS crypto provider — caller must call
#   rustls::crypto::CryptoProvider::install_default(…) before creating sessions.
[dependencies.rustrtc]
git = "https://github.com/restsend/rustrtc"
rev = "ef11fe717c9206382cb149c9bf11f02f54de9f69"

[dependencies.rustls]
version = "0.23.37"

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]
optional = true

[dev-dependencies]
jsonschema = "0.43"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["json"] }

[[example]]
name = "rustrtc_spike"
required-features = ["rustrtc-spike"]
